[hy-AM] update from Pootle (mobile)

--- a/hy-AM/mobile/android/chrome/browser.properties
+++ b/hy-AM/mobile/android/chrome/browser.properties
@@ -220,7 +220,7 @@ casting.mirrorTabStop=Ընդհատել արտացոլումը
 # Context menu
 contextmenu.openInNewTab=Բացել հղումը նոր ներդիրում
 contextmenu.openInPrivateTab=Սկսել Գաղտնի դիտարկում
-contextmenu.addToReadingList=Ավելացնել Ընթերցումների ցանկին
+contextmenu.addToReadingList=Ավելացնել Ընթերցացուցակում
 contextmenu.share=Տարածել
 contextmenu.copyLink=Պատճենել հղումը
 contextmenu.shareLink=Տարածել հղումը
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Ծրագիր
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=%S պորտի ունկնդրում
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Ակտիվացնել վրիպազերծումը %S-ի համար
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Դիպչեք՝ ակտիվացնելու համար հեռակա վրիպազերծումը
 
 # Helper apps
 helperapps.open=Բացել
