[sv-SE] update from Pootle (mobile)

--- a/sv-SE/mobile/android/chrome/browser.properties
+++ b/sv-SE/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Lyssnar på port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Aktivera avlusning för %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Tryck här för att aktivera fjärravlusare
 
 # Helper apps
 helperapps.open=Öppna
