--- a/sv-SE/mobile/android/chrome/aboutHome.properties
+++ b/sv-SE/mobile/android/chrome/aboutHome.properties
@@ -2,4 +2,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-banner.firstrunHomepage.text=Välkommen till din hemsida! Du kommer tillbaka hit varje gång du öppnar en ny flik.
+banner.firstrunHomepage.text=Välkommen till din hem-sida! Du kommer tillbaka hit varje gång du öppnar en ny flik.
