[te] update from Pootle (mobile)

--- a/te/mobile/android/chrome/browser.properties
+++ b/te/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=అనువర్తనం
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=పోర్ట్ %S పైన వింటోంది
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=%S కొరకు డీబగ్గింగ్ క్రియాశీలపరచు
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=రిమోట్ డీబగ్గర్ క్రియాశీలపరచుటకు తాకండి
 
 # Helper apps
 helperapps.open=తెరువు
