--- a/te/mobile/android/chrome/webapp.properties
+++ b/te/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 నవీకరణ విఫలం;#1 నవీకరణ
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=%1$S కు నవీకరణ పొందుటలో విఫలం;%1$S కు నవీకరణ పొందుటలో విఫలం
 
-webappsDisabledInGuest=అతిథి సెషన్లలో ఆప్స్‌ని స్థాపించుకోవడం కుదరదు
+webappsDisabled=అనువర్తనాల సంస్థాపన అచేతనంచేసెను
