[S] devtools: Bug 1050502 - [timeline] display console.time/timeEnd calls as markers

--- a/it/browser/chrome/browser/devtools/timeline.properties
+++ b/it/browser/chrome/browser/devtools/timeline.properties
@@ -11,3 +11,5 @@ timeline.label.styles = Stili
 timeline.label.reflow = Reflow
 timeline.label.paint = Paint
 timeline.label.domevent = Eventi DOM
+timeline.label.consoleTime = Console
+timeline.markerDetailFormat = %1$S (%2$S)
