[sv-SE] update from Pootle (mobile)

--- a/sv-SE/mobile/android/chrome/webapp.properties
+++ b/sv-SE/mobile/android/chrome/webapp.properties
@@ -56,3 +56,4 @@ retrievalFailedTitle=#1 updatering misslyckades;#1 uppdateringar misslyckades
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Misslyckades att ladda hem uppdateringar för %1$S; Misslyckades att ladda ner uppdateringar för %1$S
 
+webappsDisabled=Möjligheten att installera program är inaktiverad
