updated latvian translation

--- a/lv/netwerk/necko.properties
+++ b/lv/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Jūs grasāties doties uz "%1$S". Šī vietne varbūt mēģina jūs
 PhishingAuthAccept=Es saprotu un būšu ļoti piesardzīgs
 SuperfluousAuth=Jūs grasāties pieteikties vietnē "%1$S" ar lietotājvārdu "%2$S", bet tīmekļa vietne nepieprasa autentificēšanos. Tas var būt mēģinājums jūs apkrāpt.\n\nVai tiešām vēlaties doties uz "%1$S"?
 AutomaticAuth=Jūs grasāties pieteikties vietnē "%1$S" ar lietotājvārdu "%2$S".
+
+TrackingUriBlocked=Resurss no "%1$S" tika bloķēts, jo ir aktivizēta izsekošanas aizsardzība.
