--- a/lv/security/manager/chrome/pipnss/nsserrors.properties
+++ b/lv/security/manager/chrome/pipnss/nsserrors.properties
@@ -302,5 +302,19 @@ SSL_ERROR_POST_WARNING=Neatpazīts SSL kļūdas kods.
 SSL_ERROR_UNUSED_5=Neatpazīts SSL kļūdas kods.
 SSL_ERROR_UNUSED_10=Neatpazīts SSL kļūdas kods.
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=The server uses key pinning (HPKP) but no trusted certificate chain could be constructed that matches the pinset. Key pinning violations cannot be overridden.
-MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Sserveris izmanto sertifikātu ar pamata ierobežojumu paplašinājumu (basic constraints extension) kā tā sertifikātu autoritāti. Korekti izsniegtiem sertifikātiem nevajadzētu būt šādi.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Serveris izmanto sertifikātu ar pamata ierobežojumu paplašinājumu (basic constraints extension) kā tā sertifikātu autoritāti. Korekti izsniegtiem sertifikātiem nevajadzētu būt šādi.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Serveris piedāvāja sertifikātu ar pārāk mazu atslēgas garumu, lai izveidotu drošu savienojumu.
+
+
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL partneris izvēlējās šifrētāju, kas šai protokola versijai nav atļauts.
+SSL_ERROR_DIGEST_FAILURE=Kontrolsummas funkcija avarēja.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL funkcija nav pieejama šajā protokola versijā.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Serveris noraidīja sarokošanos, jo klients pazeminājās uz zemāku TLS versiju, kā atbalsta serveris.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Elektroniski parakstītā elementā norādīts nederīgs algoritms.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL versiju apgabals nav derīgs.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Tika aktivizēts nākamais protokola noteikšanas papildinājums, bet atgriezeniskais izsaukums tika notīrīts pirms bija nepieciešams.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Serveris neatbalsta nevienu protokolu, ko klients piedāvā savā ALPN paplašinājumā.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL saņēma nekorekti noformētu Hello Verify Request rokas spiediena ziņojumu.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL saņēma negaidītu Certificate Status rokas spiediena ziņojumu.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL negaidītu Hello Verify Request rokas spiediena ziņojumu.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=TLS partneris izmanto negaidītu kontrolsummas algoritmu.
