--- a/lv/toolkit/chrome/global/autocomplete.properties
+++ b/lv/toolkit/chrome/global/autocomplete.properties
@@ -7,3 +7,5 @@
 # the provider can also end with "Search" (e.g.: MSN Search).
 searchWithEngine = Meklēt ar %S
 switchToTab = Pāriet uz cilni
+searchWithEngineForQuery = %2$S — Meklet ar %1$S 
+visitURL = Apmeklēt %S
