--- a/lv/toolkit/chrome/global/resetProfile.properties
+++ b/lv/toolkit/chrome/global/resetProfile.properties
@@ -8,6 +8,5 @@
 resetUnusedProfile.message=Šķiet %S nav kādu laiku izmantots. Vai vēlaties to atjaunot uz tīru un svaigu stāvokli, kā sākumā? Un jā, mēs priecājamies Jūs redzēt atpakaļ!
 
 # LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Atjaunot %S…
-resetProfile.resetButton.accesskey=t
-
+refreshProfile.resetButton.label=Atjaunot %S…
+refreshProfile.resetButton.accesskey=t
