[qa][browser] Fix loop error string

--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -210,7 +210,7 @@ peer_ended_conversation2=Votre correspondant a mis fin à la conversation.
 conversation_has_ended=Votre conversation est terminée.
 restart_call=Rappeler
 
-generic_failure_title=Quelque chose s'est mal passé.
+generic_failure_title=Une erreur s'est produite.
 generic_failure_with_reason2=Vous pouvez réessayer ou envoyer par message électronique un lien permettant d'être contacté plus tard.
 generic_failure_no_reason2=Voulez-vous réessayer ?
 
