Bug 1084092 - Update the loop-call-button tooltiptext entity name to be consistent with the label entity name

--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,10 +97,10 @@ quit-button.tooltiptext.mac = Ukončiť %1$S (%2$S)
 social-share-button.label = Zdieľať túto stránku
 social-share-button.tooltiptext = Umožní zdieľať túto stránku
 
-# LOCALIZATION NOTE(loop-call-button2.label2): This is a brand name, request
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
 loop-call-button3.label = Hello
-loop-call-button2.tooltiptext = Umožní začať rozhovor
+loop-call-button3.tooltiptext = Umožní začať rozhovor
 
 panic-button.label = Zabudnúť
 panic-button.tooltiptext = Umožní zabudnúť na históriu prehliadania za definovaný čas
