--- a/sk/mobile/android/chrome/browser.properties
+++ b/sk/mobile/android/chrome/browser.properties
@@ -391,4 +391,4 @@ feedHandler.subscribeWith=Odoberať pomocou
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%S je zavrhnuté. Použite radšej %S
+nativeWindow.deprecated=%1$S je zavrhnuté. Použite radšej %2$S
