Bug 1081093 - Auto-install Tools Adapter add-on in WebIDE

--- a/sk/browser/chrome/browser/devtools/webide.properties
+++ b/sk/browser/chrome/browser/devtools/webide.properties
@@ -52,6 +52,7 @@ addons_simulator_label=Firefox OS %1$S Simulátor (%2$S)
 addons_install_button=nainštalovať
 addons_uninstall_button=odinštalovať
 addons_adb_label=Doplnok ADB Helper
+addons_adapters_label=Doplnok Tools Adapters
 addons_adb_warning=Bez tohto doplnku nebude možné vyhľadávať zariadenia USB
 addons_status_unknown=?
 addons_status_installed=Nainštalovaný
