Bug 285270 - make the sound events configurable per-view

--- a/sk/extensions/irc/chrome/chatzilla.properties
+++ b/sk/extensions/irc/chrome/chatzilla.properties
@@ -1676,9 +1676,9 @@ pref.group.global.log.help             = Nastaví predvolený spôsob zaznamená
 pref.group.global.maxLines.label       = Veľkosť histórie
 pref.group.global.maxLines.help        = Počet riadkov textu, ktoré budú zachované pre tento typ karty. Ak bude dosiahnutý zadaný limit, najstaršie riadky budú pri pridaní nových vymazané.
 pref.group.global.sounds.label         = Konfigurácia zvuku
-pref.group.global.sounds.help          =
-pref.group.global.soundEvts.label      = Zvukové udalosti
-pref.group.global.soundEvts.help       = Zvuky pre niektoré udalosti klienta. Môžete zadať zoznam zvukov definovaných ako "beep" alebo cestou k súboru file:URL, jednotlivé zvuky oddeľte medzerou.
+pref.group.general.sounds.help          =
+pref.group.general.soundEvts.label      = Zvukové udalosti
+pref.group.general.soundEvts.help       = Zvuky pre niektoré udalosti klienta. Môžete zadať zoznam zvukov definovaných ako "beep" alebo cestou k súboru file:URL, jednotlivé zvuky oddeľte medzerou.
 
 # These are the prefs that get grouped #
 
