--- a/sk/extensions/irc/chrome/chatzilla.properties
+++ b/sk/extensions/irc/chrome/chatzilla.properties
@@ -1017,6 +1017,10 @@ msg.logfile.write.error = Nie je možné zapisovať do súboru ``%S''. Záznam d
 
 msg.logging.icon.off = Záznam do protokolu je vypnutý. Kliknutím na ikonu ho zapnete pre toto zobrazenie.
 msg.logging.icon.on  = Záznam do protokolu je zapnutý. Kliknutím na ikonu ho vypnete pre toto zobrazenie.
+
+msg.alert.icon.off = Upozornenia na správy sú vypnuté. Kliknutím na ikonu zapnete zobrazovanie upozornení na nové správy.
+msg.alert.icon.on  = Upozornenia na správy sú zapnuté. Kliknutím na ikonu vypnete zobrazovanie upozornení na nové správy.
+
 msg.already.connected  = Už ste pripojený k ``%S''.
 msg.enter.nick         = Zadajte prezývku
 msg.network.connecting = Pokus o pripojenie k ``%S''. Zadaním príkazu /cancel pripájanie zrušíte.
@@ -1446,6 +1450,20 @@ msg.prefs.global              = Globálne nastavenia
 # NOTE: "Bugzilla", "ChatZilla" and "mIRC" are product names.
 pref.activityFlashDelay.label   = Interval blikania indikátora aktivity
 pref.activityFlashDelay.help    = Ak sa na karte, na ktorej už bola detekovaná aktivita, prejaví ďalšia aktivita, začne karta blikať, aby to dala najavo. Táto predvoľba určuje dĺžku blikania, zadaním hodnoty 0 blikanie zakážete.
+pref.alert.globalEnabled.label  = Globally enabled
+pref.alert.globalEnabled.help   = When enabled, all alerts configured may be shown. When disabled, no alerts will be shown. Provides nothing more than a global toggle.
+pref.alert.enabled.label        = Enabled
+pref.alert.enabled.help         = When enabled, popups are shown for this view.
+pref.alert.nonFocusedOnly.label = Only when window not active
+pref.alert.nonFocusedOnly.help  = When enabled, all message notifications are supressed when the window is active. Otherwise, message notifications for non-active views will be shown. Unchecking is suggested for channel moderators or for low traffic channels.
+pref.alert.channel.event.label  = Alert for Channel Event
+pref.alert.channel.event.help   = Shows message notifications for joins, parts, kicks, usermodes, and any other system messages. Suggested for channel moderators or for low traffic channels.
+pref.alert.channel.chat.label   = Alert for Channel Chat
+pref.alert.channel.chat.help    = Show message notifications for normal chat messages. It may be annoying for high traffic channels. Suggested for moderators or for low traffic channels.
+pref.alert.channel.stalk.label  = Alert for Channel Stalk
+pref.alert.channel.stalk.help   = Shows message notifications for messages containing stalk words.
+pref.alert.user.chat.label      = Alert for User Chat
+pref.alert.user.chat.help       = Shows message notifications for private messages.
 pref.aliases.label              = Aliasy príkazov
 pref.aliases.help               = Umožňuje vytvoriť rôzne skratky pre príkazy alebo sekvencie príkazov. Každá položka musí mať formát "<name> \= <command-list>", kde command-list je zoznam príkazov (bez počiatočného znaku "/") a ich parametre oddelené ";". Názov aliasu sa pri štarte ChatZilly automaticky stane príkazom.
 pref.autoAwayCap.label          = Limit pre automatické kontrolovanie prítomnosti
@@ -1614,17 +1632,17 @@ pref.sound.overlapDelay.label   = Doba prekrytia
 pref.sound.overlapDelay.help    = Doba, počas ktorej rovnaká udalosť nespustí znova rovnaký zvuk. Napr. predvolená hodnota, ktorá je 2000ms (2 sekundy) znamená, že ak počas 2 sekúnd nastanú dve rovnaké udalosti, zvukový signál spustí iba prvá z nich.
 ##pref.sound.surpressActive.label = Potlačiť zvuky pre aktuálnu kartu
 ##pref.sound.surpressActive.help  = Zvuky udalostí aktívnej karty nebudú ChatZilou prehrávané. Zvuky z ostatných kariet budú prehrávané normálne.
-pref.sound.channel.start.label  = Kanál: Spustenie relácie
+pref.sound.channel.start.label  = Sound for Channel Start
 pref.sound.channel.start.help   =
-pref.sound.channel.event.label  = Kanál: Nechatovacia udalosť
+pref.sound.channel.event.label  = Sound for Channel Event
 pref.sound.channel.event.help   =
-pref.sound.channel.chat.label   = Kanál: Normálny chat
+pref.sound.channel.chat.label   = Sound for Channel Chat
 pref.sound.channel.chat.help    =
-pref.sound.channel.stalk.label  = Kanál: Nájdené sledované slovo
+pref.sound.channel.stalk.label  = Sound for Channel Stalk
 pref.sound.channel.stalk.help   =
-pref.sound.user.start.label     = Používateľ: Spustenie relácie
+pref.sound.user.start.label     = Sound for User Start
 pref.sound.user.start.help      =
-pref.sound.user.stalk.label     = Používateľ: Normálny chat
+pref.sound.user.stalk.label     = Sound for User Chat
 pref.sound.user.stalk.help      =
 pref.stalkWholeWords.label      = Sledovať len celé slová
 pref.stalkWholeWords.help       = Toto nastavenie mení spôsob sledovania zadaných slov. Prepína medzi vyhľadávaním celých slov a podreťazcov. Napr. v texte "ChatZilla je super" bude sledované "zilla" nájdené len v prípade, že ak je toto nastavenie vypnuté.
@@ -1647,6 +1665,8 @@ pref.group.general.label               = Všeobecné
 pref.group.general.connect.label       = Pripojenie
 pref.group.general.ident.label         = Identifikácia
 pref.group.general.log.label           = Prihlasovanie
+pref.group.general.palert.label        = Upozornenia na správy
+pref.group.global.palertconfig.label   = Nastavenie upozornení na správy
 pref.group.appearance.label            = Vzhľad
 pref.group.appearance.misc.label       = Rôzne
 pref.group.appearance.motif.label      = Motívy
