[S] security: Bug 886752 - Show TLS/SSL version in page info dialog

--- a/it/security/manager/chrome/pippki/pippki.properties
+++ b/it/security/manager/chrome/pippki/pippki.properties
@@ -49,10 +49,10 @@ pageInfo_NoEncryption = Connessione non cifrata
 pageInfo_Privacy_None1 = Il sito %S non supporta la cifratura per la pagina visualizzata.
 pageInfo_Privacy_None2 = Le informazioni non cifrate trasmesse attraverso Internet possono essere intercettate da terzi durante il transito.\u0020
 pageInfo_Privacy_None3 = La pagina attualmente visualizzata non è cifrata.
-pageInfo_StrongEncryptionWithBits = Connessione cifrata: alta efficacia (%1$S, chiavi %2$S bit)
+pageInfo_StrongEncryptionWithBitsAndProtocol = Connessione cifrata: alta efficacia (%1$S, chiavi da %2$S bit, %3$S)
 pageInfo_Privacy_Strong1 = La pagina visualizzata è stata cifrata prima di essere trasmessa.
 pageInfo_Privacy_Strong2 = La cifratura rende molto difficile osservare le informazioni scambiate tra computer a persone non autorizzate. È quindi improbabile che qualcuno sia riuscito a leggere il contenuto di questa pagina durante il suo transito attraverso la rete.
-pageInfo_WeakEncryptionWithBits = Connessione cifrata: bassa efficacia (%1$S, chiavi %2$S bit)
+pageInfo_WeakEncryptionWithBitsAndProtocol = Connessione cifrata: bassa efficacia (%1$S, chiavi da %2$S bit, %3$S)
 pageInfo_Privacy_Weak1 = Il sito %S utilizza per la pagina visualizzata una cifratura poco efficace.
 pageInfo_Privacy_Weak2 = Una cifratura poco efficace potrebbe consentire di leggere queste informazioni a persone non autorizzate.
 pageInfo_MixedContent = Connessione parzialmente cifrata
