--- a/nb-NO/mobile/android/chrome/browser.properties
+++ b/nb-NO/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Installer
 
 # Alerts
 alertAddonsDownloading=Laster ned utvidelse
-alertAddonsInstalledNoRestart=Installering ferdig.
-alertAddonsFail=Noe gikk galt under installeringen
+alertAddonsFail=Installering mislyktes
+alertAddonsInstalledNoRestart.message=Installering ferdig
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=UTVIDELSER
 
 alertDownloadsStart2=Nedlastinger starter
 alertDownloadsDone2=Nedlasting fullført
@@ -19,6 +23,9 @@ alertDownloadsToast=Nedlasting startet …
 alertDownloadsPause=Pause
 alertDownloadsResume=Fortsett
 alertDownloadsCancel=Avbryt
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Nedlastinger er avslått i gjesteøkter
 
 alertFullScreenToast=Trykk TILBAKE for å avslutte fullskjermmodus
 
@@ -116,6 +123,35 @@ contacts.ask=Tillat %S å få tilgang til kontaktene dine?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Ikke spør igjen for dette nettstedet
 
+# Device Storage API
+deviceStorageMusic.allow=Tillat
+deviceStorageMusic.dontAllow=Ikke tillat
+deviceStorageMusic.ask=Tillat %S tilgang til musikken din?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Ikke spør igjen for dette nettstedet
+
+deviceStoragePictures.allow=Tillat
+deviceStoragePictures.dontAllow=Ikke tillat
+deviceStoragePictures.ask=Tillat %S tilgang til bildene dine?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Ikke spør igjen for dette nettstedet
+
+deviceStorageSdcard.allow=Tillat
+deviceStorageSdcard.dontAllow=Ikke tillat
+deviceStorageSdcard.ask=Tillat %S tilgang til ekstern lagring?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Ikke spør igjen for dette nettstedet
+
+deviceStorageVideos.allow=Tillat
+deviceStorageVideos.dontAllow=Ikke tillat
+deviceStorageVideos.ask=Tillat %S tilgang til videoene dine?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Ikke spør igjen for dette nettstedet
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Tekst kopiert til utklippstavlen
 
 # Casting
-casting.prompt=Cast til enhet
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Send til enhet
+casting.mirrorTab=Speil fane
+casting.mirrorTabStop=Stopp speiling av fane
 
 # Context menu
 contextmenu.openInNewTab=Åpne lenke i ny fane
@@ -209,7 +249,9 @@ contextmenu.unmute=Slå av demping
 contextmenu.saveVideo=Lagre video
 contextmenu.saveAudio=Lagre lyd
 contextmenu.addToContacts=Legg til i kontakter
-contextmenu.castToScreen=Cast til skjerm
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Send til enhet
 
 contextmenu.copy=Kopier
 contextmenu.cut=Klipp ut
@@ -341,3 +383,9 @@ browser.menu.context.mailto = E-post
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Velg kilde
 feedHandler.subscribeWith=Abonner med
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S er frarådet. Bruk %S isteden
