--- a/nb-NO/mobile/android/chrome/webapp.properties
+++ b/nb-NO/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 oppdatering mislykket;#1 oppdateringer mislykket
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Klarte ikke hente oppdatering for %1$S;Klarte ikke hente oppdateringer for %1$S
+
+webappsDisabledInGuest=Installering av apps er avslått i gjesteøkter
