improve translation for 'reflow' and newtab tile.

--- a/ja/browser/chrome/browser/devtools/webconsole.properties
+++ b/ja/browser/chrome/browser/devtools/webconsole.properties
@@ -96,8 +96,8 @@ gcliterm.instanceLabel		= %S のインスタンス
 # reflow: 12ms function foobar, file.js line 42
 # The 2nd line, from "function" to the end of the line, is a link to the
 # JavaScript debugger.
-reflow.messageWithNoLink	= 再描画: %Sms
-reflow.messageWithLink		= 再描画: %Sms\u0020
+reflow.messageWithNoLink	= リフロー: %Sms
+reflow.messageWithLink		= リフロー: %Sms\u0020
 reflow.messageLinkText		= 関数 %1$S, %2$S 行 %3$S
 
 # LOCALIZATION NOTE (stacktrace.anonymousFunction): this string is used to
