dom update 1 for aurora 35

--- a/fy-NL/dom/chrome/accessibility/AccessFu.properties
+++ b/fy-NL/dom/chrome/accessibility/AccessFu.properties
@@ -155,12 +155,13 @@ stateChecked     =    oanfinkt
 stateNotChecked  =    net oanfinkt
 statePressed     =    yndrukt
 # No string for a not pressed toggle button
-stateExpanded    =    utklapt
+stateExpanded    =    útklapt
 stateCollapsed   =    ynklapt
 stateUnavailable =    net beskikber
+stateReadonly    =    allinnich-lêze
 stateRequired    =    fereaske
 stateTraversed   =    besocht
-stateHasPopup    =    hat popup
+stateHasPopup    =    hat pop-up
 stateSelected    =    selektearre
 
 # App modes
