--- a/fy-NL/dom/chrome/security/security.properties
+++ b/fy-NL/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Cross-Origin Request Blocked: Itselde orizjinele belied 
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=De website spesifisearre in ynfalide Strict-Transport-Security kop.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=De website spesifisearre in net jildige Public-Key-Pins-header.
 InsecurePasswordsPresentOnPage=Wachtwurdfjild oanwêzich op in ûnfeilge (http://) side. Dit is in feilichheidsrisiko dat it stellen fan brûkers-logynreferinsjes tastiet.
 InsecureFormActionPasswordsPresent=Wachtwurdfjild oanwêzich yn in formulier mei in ûnfeilige (http://) formulieraksje. Dit is in feilichheidsrisiko dat it stellen fan brûkers-logynreferinsjes tastiet.
 InsecurePasswordsPresentOnIframe=Wachtwurdfjild oanwêzich op in ûnfeilch (http://) iframe. Dit is in feilichheidsrisiko dat it stellen fan brûkers-logynreferinsjes tastiet.
 LoadingMixedActiveContent=Laden mingde (ûnfeilige) aktive-ynhâld op feilige side “%1$S”
 LoadingMixedDisplayContent=Laden mingde (ûnfeilige) finsterynhâld op feilige side “%1$S”
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=In iframe mei as sandboxattribute allow-scripts en allow-same-origin kin syn sandbox fuortsmite.
