netwerk update 1 for aurora 35

--- a/fy-NL/netwerk/necko.properties
+++ b/fy-NL/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Jo stean op it punt om "%1$S" te besykjen. Dizze side kin probearje
 PhishingAuthAccept=Ik begryp it en sil warber wêze
 SuperfluousAuth=Jo stean op it punt om yn te loggen op de side "%1$S" mei de brûkersnamme "%2$S," mar it webstee fereasket gjin autentikaasje. Dit kin in poging wêze om jo te mislearren. \n\nIs "%1$S" de side dy't jo sjen wolle?
 AutomaticAuth=Jo stean op it punt om jo oan te melden by de side "%1$S" mei de brûkersnamme "%2$S."
+
+TrackingUriBlocked=De boarne op “%1$S” is blokkearre omdat folchbeskerming ynskeakele is.
