security update 1 for aurora 35

--- a/fy-NL/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fy-NL/security/manager/chrome/pipnss/nsserrors.properties
@@ -1,4 +1,3 @@
-#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -123,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL ûntfong in ûnjildige NPN-extinsjedata
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL-eigenskip wurdt net stipe foar SSL 2.0 ferbiningen.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL-eigenskip wurdt net stipe foar tsjinners.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL-eigenskip wurdt net stipe foar clients.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL ferzjeberik is net falide.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL peer selektearre yn cipher suite net tastien foar de selektearre protokolferzje.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL ûntfong in skansearre Hello Verify Request handshake-berjocht.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL ûntfong in unferwacht Hello Verify Request handshake-berjocht.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL-funksje net stipe foar de protokolferzje.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL ûntfong in unferwacht Certificate Status handshake-berjocht.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Net stipe hash-algoritme brûkt troch TLS-peer.
+SSL_ERROR_DIGEST_FAILURE=Digest-funksje mislearre.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Ferkearde ûndertekeneingsalgoritme spesifisearre yn in digitaal-ûndertekene elemint.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=De folgjene protokolûndehannelingsútwreiding is útskeakele, mar de callback wie wiske eardat it ferwacht waard.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=De server stipet gjin protokollen dy't de client foarstelt yn de ALPN-útwreiding.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=De server wegere de handshake, omdat de client nei in legere TLS-ferzje brocht is as de server stipet.
 SEC_ERROR_IO=Der is in I/O-flater bard tiidens befeiligingsautorisaasje.
 SEC_ERROR_LIBRARY_FAILURE=flater yn befeiligingsbibleteek.
 SEC_ERROR_BAD_DATA=befeiligingsbibleteek: ferkearde gegevens ûntfongen.
