dom update 2 for aurora 35

--- a/fy-NL/dom/chrome/layout/css.properties
+++ b/fy-NL/dom/chrome/layout/css.properties
@@ -56,8 +56,8 @@ PECounterExtendsNotIdent=‘%1$S’ fûn wêr't identifikator foar extends-syste
 PECounterASWeight=Elts gewicht yn de additive-symbols descriptor moat lytser wêza as de foargeande.
 PEClassSelEOF=klassenamme
 PEClassSelNotIdent=‘%1$S’ fûn wêr identifikator foar klasseselektor ferwachte.
-PPECoordinatePair=‘%1$S’ fûn wêr koördinaten ferwachte.
-ETypeSelEOF=eleminttype
+PECoordinatePair=‘%1$S’ fûn wêr koördinaten ferwachte.
+PETypeSelEOF=eleminttype
 PETypeSelNotType=‘%1$S’ fûn wêr elemintnamme of ‘*’ ferwachte.
 PEUnknownNamespacePrefix=Unbekende namespace-prefix ‘%1$S’.
 PEAttributeNameEOF=attribuutnamme
