--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,9 @@ quit-button.tooltiptext.linux2 = Dilni nga %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Dilni nga %1$S (%2$S)
+
+panic-button.label = Harroje
+panic-button.tooltiptext = Harro historikun e shfletimit
+
+loop-call-button.label = Ftojeni dikë për bisedë
+loop-call-button.tooltiptext = Ftoni dikë për bisedë
