--- a/fy-NL/toolkit/chrome/global/resetProfile.properties
+++ b/fy-NL/toolkit/chrome/global/resetProfile.properties
@@ -8,5 +8,5 @@
 resetUnusedProfile.message=It liket as oft jo %S in tiid lyn net starten hawwe. Wolle jo it opskjinje foar in fris, lykas-nij ûnderfining? En trouwens, wolkom werom!
 
 # LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Werstelle %S…
-resetProfile.resetButton.accesskey=e
+refreshProfile.resetButton.label=%S fernije…
+refreshProfile.resetButton.accesskey=e
