--- a/sq/browser/chrome/browser/devtools/toolbox.properties
+++ b/sq/browser/chrome/browser/devtools/toolbox.properties
@@ -66,3 +66,16 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Merrni një element nga një faqe
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Temë e errët
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Temë e çelët
+
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Mundësi
+
