--- a/sq/browser/chrome/browser/devtools/webconsole.properties
+++ b/sq/browser/chrome/browser/devtools/webconsole.properties
@@ -244,3 +244,19 @@ messageToggleDetails=Shfaqni/fshihni hollësi mesazhi.
 # LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
 # label for the toolbox panel.
 ToolboxWebConsole.panelLabel=Panel Konsole
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 vend i pazënë;#1 vende të pazëna
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(tregues)
+table.iterationIndex=(tregues ripërsëritjeje)
+table.key=Kyç
+table.value=Vlerë
