--- a/sq/browser/chrome/browser/devtools/webide.properties
+++ b/sq/browser/chrome/browser/devtools/webide.properties
@@ -5,65 +5,65 @@
 title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
-runtimeButton_label=Select Runtime
-projectButton_label=Open App
+runtimeButton_label=Përzgjidhni Runtime
+projectButton_label=Hape Zbatimin
 
-mainProcess_label=Main Process
+mainProcess_label=Procesi Kryesor
 
-local_runtime=Local Runtime
-remote_runtime=Remote Runtime
-remote_runtime_promptTitle=Remote Runtime
+local_runtime=Runtime Vendore
+remote_runtime=Runtime e Largët
+remote_runtime_promptTitle=Runtime e Largët
 remote_runtime_promptMessage=hostname:port
 
-importPackagedApp_title=Select Directory
-importHostedApp_title=Open Hosted App
-importHostedApp_header=Enter Manifest URL
+importPackagedApp_title=Përzgjidhni Drejtori
+importHostedApp_title=Hapni Zbatim të Strehuar
+importHostedApp_header=Jepni URL Manifesti
 
-notification_showTroubleShooting_label=troubleshooting
-notification_showTroubleShooting_accesskey=t
+notification_showTroubleShooting_label=diagnostikim
+notification_showTroubleShooting_accesskey=d
 
 # These messages appear in a notification box when an error occur.
 
-error_cantInstallNotFullyConnected=Can't install project. Not fully connected.
-error_cantInstallValidationErrors=Can't install project. Validation errors.
-error_listRunningApps=Can't get app list from device
+error_cantInstallNotFullyConnected=Nuk instalohet dot projekti. Jo i lidhur plotësisht.
+error_cantInstallValidationErrors=Nuk instalohet dot projekti. Gabime vleftësimi.
+error_listRunningApps=Nuk merret dot lista e zbatimeve nga pajisja
 
 # Variable: name of the operation (in english)
-error_operationTimeout=Operation timed out: %1$S
-error_operationFail=Operation failed: %1$S
+error_operationTimeout=Veprimit i mbaroi koha: %1$S
+error_operationFail=Veprimi dështoi: %1$S
 
 # Variable: app name
-error_cantConnectToApp=Can't connect to app: %1$S
+error_cantConnectToApp=Nuk lidhet dot me zbatimin: %1$S
 
 # Variable: error message (in english)
-error_cantFetchAddonsJSON=Can't fetch the add-on list: %S
+error_cantFetchAddonsJSON=Nuk sillet dot lista e shtesave: %S
 
-addons_stable=stable
-addons_unstable=unstable
+addons_stable=e qëndrueshme
+addons_unstable=e paqëndrueshme
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
 # "stable" or "unstable".
-addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
-addons_install_button=install
-addons_uninstall_button=uninstall
-addons_adb_label=ADB Helper Add-on
-addons_adb_warning=USB devices won't be detected without this add-on
+addons_simulator_label=Simulues Firefox OS %1$S (%2$S)
+addons_install_button=instaloje
+addons_uninstall_button=çinstaloje
+addons_adb_label=Shtesa ADB Helper
+addons_adb_warning=Pa këtë shtesë pajisjet USB nuk do të kapen dot
 addons_status_unknown=?
-addons_status_installed=Installed
-addons_status_uninstalled=Not Installed
-addons_status_preparing=preparing
-addons_status_downloading=downloading
-addons_status_installing=installing
+addons_status_installed=E instaluar
+addons_status_uninstalled=Jo e  instaluar
+addons_status_preparing=pp përgatitet
+addons_status_downloading=po shkarkohet
+addons_status_installing=po instalohet
 
-runtimedetails_checkno=no
-runtimedetails_checkyes=yes
-runtimedetails_checkunkown=unknown
-runtimedetails_notUSBDevice=Not a USB device
+runtimedetails_checkno=jo
+runtimedetails_checkyes=po
+runtimedetails_checkunkown=e panjohur
+runtimedetails_notUSBDevice=Jo një pajisje USB
 
 # Validation status
-status_tooltip=Validation status: %1$S
-status_valid=VALID
-status_warning=WARNINGS
-status_error=ERRORS
-status_unknown=UNKNOWN
+status_tooltip=Gjendje vleftësimi: %1$S
+status_valid=E VLEFSHME
+status_warning=SINJALIZIME
+status_error=GABIME
+status_unknown=E PANJOHUR
