mobile update 1 for aurora 35

--- a/fy-NL/mobile/android/chrome/browser.properties
+++ b/fy-NL/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Lústerje op poarte %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Debugging aktivearje foar %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Tik om remote debugger te aktivearjen
 
 # Helper apps
 helperapps.open=Iepenje
