--- a/fy-NL/mobile/android/chrome/webapp.properties
+++ b/fy-NL/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 download mislearre;#1 downloads mislearre
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Opheljen fan fernijing foar %1$S mislearre;Opheljen fan fernijinge foar %1$S mislearre
 
-webappsDisabledInGuest=It ynstallearjen fan apps is útskeakele yn gastsesjes
+webappsDisabled=Apps ynstallearjen is útskeakele
