--- a/sq/browser/chrome/browser/quitDialog.properties
+++ b/sq/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Ruaji dhe Mbylle
 neverAsk2=M&os më pyet herës tjetër
 message=Doni që %S-i të ruajë skedat dhe dritaret tuaja për herës tjetër që do të niset?
 messageNoWindows=Doni që %S-i të ruajë skedat tuaja për herës tjetër që do të niset?
+messagePrivate=Jeni nën mënyrën shfletim privat. Dalja prej %S-i tani do të hedhë tej krejt skedat dhe dritaret tuaja të hapura.
