--- a/sq/browser/chrome/browser/shellservice.properties
+++ b/sq/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=&Mundësi %S-i
 safeModeLabel=%S në Mënyrë të &Sigurt
-setDefaultBrowserTitle=Shfletues Parazgjedhje
-setDefaultBrowserMessage=%S-i, hëpërhë, s'është caktuar si shfletuesi juaj parazgjedhje. Do të donit ta bënit shfletuesin tuaj parazgjedhje?
-setDefaultBrowserDontAsk=Kryeje përherë këtë kontroll kur niset %S-i.
-alreadyDefaultBrowser=%S-i është caktuar tashmë si shfletuesi juaj parazgjedhje.
-desktopBackgroundLeafNameWin=Sfond.bmp Desktopi
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Përfitoni maksimumin prej %S-it duke e caktuar si shfletuesin tuaj parazgjedhje
+setDefaultBrowserConfirm.label     = Përdore %S-i si shfletuesin tim parazgjedhje
+setDefaultBrowserConfirm.accesskey = P
+setDefaultBrowserOptions.label     = Mundësi
+setDefaultBrowserOptions.accesskey = M
+setDefaultBrowserNotNow.label      = Jo tani
+setDefaultBrowserNotNow.accesskey  = JN
+setDefaultBrowserNever.label       = Mos më pyet më
+setDefaultBrowserNever.accesskey   = o
+
+
+desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Pamja po ruhet…
 DesktopBackgroundSet=Vëre si Sfond Desktopi
