--- a/sq/browser/chrome/browser/newTab.properties
+++ b/sq/browser/chrome/browser/newTab.properties
@@ -5,6 +5,26 @@
 newtab.pin=Fiksoje këtë sajt te pozicioni i tanishëm
 newtab.unpin=Çfiksoje këtë sajt
 newtab.block=Hiqe këtë sajt
-newtab.show=Shfaq faqen e skedës së re
-newtab.hide=Fshihe faqen e skedës së re
-newtab.sponsored=Shfaq të dhëna rreth skedash të sponsorizuara
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=E SPONSORIZUAR
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Ky kuadrat po ju shfaqet nga një partner i Mozilla-s. Mund ta hiqni kurdo, duke klikuar mbi butonin %1$S button. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Këtë kuadrat e ka zgjeruar nga ana pamore një partner i Mozilla-s, duke zëvendësuar foton e ekranit. Kuadratet e zgjeruar mund t’i mbyllni duke klikuar te butoni %1$S për parapëlqimet tuaja. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Kur hapni një skedë të re, do të shihni kuadrate prej sajtesh që vizitoni vazhdimisht, bashkë me kuadrate që ne mendojmë se mund të jenë me interes për ju. Disa prej këtyre kuadrateve mund të jenë të sponsorizuar nga partnerë të Mozilla-s. Do t’ju tregojmë përherë se cilët kuadrate janë të sponsorizuarit. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Që të mund të ofrojë këtë shërbim, Mozilla grumbullon dhe përdor, në përputhje me %1$S të sajat, disa të dhëna analitike lidhur me përdorimin që u bëni kuadrateve.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Mekanizmin e kuadrateve mund ta çaktivizoni duke klikuar mbi butonin %1$S për parapëlqimet tuaja.
+newtab.learn.link=Mësoni më tepër…
+newtab.privacy.link=Shënime Mbi Privatësinë
