--- a/sq/browser/chrome/browser/preferences/preferences.properties
+++ b/sq/browser/chrome/browser/preferences/preferences.properties
@@ -69,6 +69,7 @@ useApp=Përdor %S
 useDefault=Përdor %S (parazgjedhje)
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Hiq të dhëna sajti web jashtë linje
 offlineAppRemovePrompt=Pas heqjes së këtyre të dhënave, %S nuk do të mund të kihet pa u lidhur.  Jeni i sigurt se doni të hiqet ky sajt web jashtë linje?
 offlineAppRemoveConfirm=Hiqi të dhënat jashtë linje"
