--- a/sq/dom/chrome/security/csp.properties
+++ b/sq/dom/chrome/security/csp.properties
@@ -47,6 +47,9 @@ allowDirectiveIsDeprecated = udhëzimi allow është i vjetruar, në vend të ti
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S po interpretohet si strehëemër, jo si fjalëkyç. Nëse e patët menduar si fjalëkyçe, përdorni '%2$S' (brenda thonjëzash njëshe).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Nuk mbulohet udhëzimi '%1$S'. Udhëzimi dhe vlerat do të shpërfillen.
 
 # CSP Errors:
 policyURINotAlone = udhëzimi policy-uri mund të shfaqet vetëm veçmas
