--- a/fr/mobile/android/chrome/webcompatReporter.properties
+++ b/fr/mobile/android/chrome/webcompatReporter.properties
@@ -4,7 +4,7 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
-webcompat.menu.name=Signaler un problème sur ce site
+webcompat.menu.name=Problème sur ce site
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
