--- a/sq/toolkit/chrome/global/aboutSupport.properties
+++ b/sq/toolkit/chrome/global/aboutSupport.properties
@@ -63,6 +63,7 @@ clearTypeParametersNotFound = Nuk u gjetën parametra ClearType
 adapterDescription = Përshkrim Përshtatësi
 adapterVendorID = ID Tregtuesi
 adapterDeviceID = ID Pajisjeje
+adapterSubsysID = ID Subsys
 adapterDrivers = Përudhës Përshtatësi
 adapterRAM = RAM Përshtatësi
 driverVersion = Version Përudhësi
@@ -70,6 +71,7 @@ driverDate = Datë Përudhësi
 adapterDescription2 = Përshkrim Përshtatësi (GPU #2) 
 adapterVendorID2 = ID Tregtuesi (GPU #2) 
 adapterDeviceID2 = ID Pajisjeje (GPU #2)
+adapterSubsysID2 = ID Subsys (GPU #2)
 adapterDrivers2 = Përudhës Përshtatësi (GPU #2)
 adapterRAM2 = RAM Përshtatësi (GPU #2)
 driverVersion2 = Version Përudhësi (GPU #2)
