--- a/sq/webapprt/webapprt/webapp.properties
+++ b/sq/webapprt/webapprt/webapp.properties
@@ -24,6 +24,7 @@ geolocation.allow=Tregoje Vendin
 geolocation.deny=Mos Ua Trego
 geolocation.remember=Mbaje mend zgjedhjen time
 
+
 # LOCALIZATION NOTE (desktop-notification.title): %S will be replaced with the
 # name of the webapp.
 desktop-notification.title=%S - Shfaq njoftime
@@ -31,19 +32,6 @@ desktop-notification.description=Doni të lejohen njoftimet?
 desktop-notification.allow=Shfaqi
 desktop-notification.deny=Mos i shfaq
 desktop-notification.remember=Mbaje mend zgjedhjen time
-
-paymentDialog.title=Pagesë
-paymentDialog.message=Cilin mundësues pagesash doni të përdoret?
-
-
-
-
-
-
-
-
-
-
 
 
 # LOCALIZATION NOTE (webapps.install.title): %S will be replaced with the name
@@ -54,3 +42,15 @@ webapps.install.title=Instaloni %S
 webapps.install.description=Doni të instalohet %S?
 webapps.install.install=Instaloje Zbatimin
 webapps.install.dontinstall=Mos e Instalo
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Çinstaloni %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Doni të çinstalohet %S?
+webapps.uninstall.uninstall=Çinstaloje Zbatimin
+webapps.uninstall.dontuninstall=Mos e Çinstalo
+
+paymentDialog.title=Pagesë
+paymentDialog.message=Cilin mundësues pagesash doni të përdoret?
+
