browser devtools update 2 for aurora 35

--- a/fy-NL/browser/chrome/browser/devtools/scratchpad.properties
+++ b/fy-NL/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Bestân iepenje
 # open fails.
 openFile.failed=Net slagge om bestân te lêzen.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Konvertearjen fan bestân nei Unikoade fanôf %1$S is mislearre.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Items wiskje
@@ -77,6 +81,11 @@ browserContext.notification=Dit skrasblok wurdt utfiert yn de browserkontekst.
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Rigel %1$S, kol %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
