--- a/fy-NL/browser/chrome/browser/devtools/webide.properties
+++ b/fy-NL/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Manifest-URL ynfiere
 notification_showTroubleShooting_label=probleemoplossing
 notification_showTroubleShooting_accesskey=o
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Lade…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Kin projekt net ynstallearje. Net folslein ferbûn.
